fix layout gap on mobile

--- a/sass/global.sass
+++ b/sass/global.sass
@@ -100,7 +100,7 @@ a, a:link
 
   @media screen and (max-width: 1024px)
     width: 100%
-    height: 3rem
+    height: 2.75rem
     overflow: visible
 
   #toc
@@ -178,7 +178,7 @@ a, a:link
   +transition-timing-function(ease)
 
   @media screen and (max-width: 1024px)
-    padding-top: 3rem
+    padding-top: 2.75rem
     padding-left: 0
     height: auto
 
